--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "An app to hold tasks",
   "main": "index.js",
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": false
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon app.js"
   },
   "author": "Edward Pledger",
@@ -15,14 +19,18 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-ejs": "^4.3.0",
+    "koa-morgan": "^1.0.1",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "nodemon": "^2.0.3"
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.3",
+    "supertest": "^4.0.2"
   }
 }
