--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "Edward Pledger",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.14.0",
     "ejs": "^3.0.2",
     "kcors": "^2.2.2",
     "koa": "^2.11.0",
