--- a/task-app/package.json
+++ b/task-app/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "angular-calendar": "^0.28.15",
+    "date-fns": "^2.13.0",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
